--- a/cpp03/ex01/Makefile
+++ b/cpp03/ex01/Makefile
@@ -1,6 +1,6 @@
 # Generated with GenMake
 # Arthur-TRT - https://github.com/arthur-trt/genMake
-# genmake vv1.1.4
+# genmake v1.1.1
 
 #Compiler and Linker
 CC					:= clang
@@ -11,8 +11,8 @@ ifeq ($(shell uname -s),Darwin)
 endif
 
 #The Target Binary Program
-TARGET				:= scavtrap
-TARGET_BONUS		:= scavtrap-bonus
+TARGET				:= ScavTrap
+TARGET_BONUS		:= ScavTrap-bonus
 
 BUILD				:= release
 
@@ -67,6 +67,7 @@ all: $(TARGETDIR)/$(TARGET)
 	@$(ECHO) "$(C_SUCCESS)All done, compilation successful! 👌 $(C_RESET)"
 
 # Bonus rule
+bonus: CFLAGS += -DBONUS
 bonus: CPPFLAGS += -DBONUS
 bonus: $(TARGETDIR)/$(TARGET_BONUS)
 	@$(ERASE)
@@ -107,8 +108,8 @@ $(BUILDIR):
 $(BUILDDIR)/%.$(OBJEXT): $(SRCDIR)/%.$(SRCEXT)
 	@mkdir -p $(dir $@)
 	@$(ECHO) "$(TARGET)\t\t[$(C_PENDING)⏳$(C_RESET)]"
-	$(CXX) $(CPPFLAGS) $(INC) -c -o $@ $<
-	@$(CXX) $(CPPFLAGS) $(INCDEP) -MM $(SRCDIR)/$*.$(SRCEXT) > $(BUILDDIR)/$*.$(DEPEXT)
+	$(CXX) $(CFLAGS) $(CPPFLAGS) $(INC) -c -o $@ $<
+	@$(CXX) $(CFLAGS) $(CPPFLAGS) $(INCDEP) -MM $(SRCDIR)/$*.$(SRCEXT) > $(BUILDDIR)/$*.$(DEPEXT)
 	@$(ERASE)
 	@$(ERASE)
 	@cp -f $(BUILDDIR)/$*.$(DEPEXT) $(BUILDDIR)/$*.$(DEPEXT).tmp
