--- a/cpp05/.vscode/launch.json
+++ b/cpp05/.vscode/launch.json
@@ -8,10 +8,10 @@
 			"name": "clang++ - Build and debug active file",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "${workspaceFolder}/ex02/form",
+			"program": "${workspaceFolder}/ex03/intern",
 			"args": [],
 			"stopAtEntry": false,
-			"cwd": "${workspaceFolder}/ex02",
+			"cwd": "${workspaceFolder}/ex03",
 			"environment": [],
 			"externalConsole": false,
 			"MIMode": "gdb",
